--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,124 @@
-# Compiled class file
-*.class
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Scanner;
+import java.util.Timer;
+import java.util.TimerTask;
 
-# Log file
-*.log
+class Question {
+    private String questionText;
+    private List<String> options;
+    private int correctOptionIndex;
 
-# BlueJ files
-*.ctxt
+    public Question(String questionText, List<String> options, int correctOptionIndex) {
+        this.questionText = questionText;
+        this.options = options;
+        this.correctOptionIndex = correctOptionIndex;
+    }
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+    public String getQuestionText() {
+        return questionText;
+    }
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+    public List<String> getOptions() {
+        return options;
+    }
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+    public int getCorrectOptionIndex() {
+        return correctOptionIndex;
+    }
+}
+
+public class QuizApplication {
+    private List<Question> questions;
+    private int currentQuestionIndex;
+    private int score;
+    private Timer timer;
+    private Scanner scanner;
+
+    public QuizApplication() {
+        this.questions = new ArrayList<>();
+        this.currentQuestionIndex = 0;
+        this.score = 0;
+        this.timer = new Timer();
+        this.scanner = new Scanner(System.in);
+    }
+
+    public void addQuestion(Question question) {
+        questions.add(question);
+    }
+
+    public void startQuiz() {
+        System.out.println("Welcome to the Quiz Application!");
+
+        timer.scheduleAtFixedRate(new TimerTask() {
+            public void run() {
+                System.out.println("\nTime's up! Moving to the next question.");
+                displayNextQuestion();
+            }
+        }, 0, 20000); // Timer set for 20 seconds per question
+
+        displayNextQuestion();
+    }
+
+    private void displayNextQuestion() {
+        if (currentQuestionIndex < questions.size()) {
+            Question currentQuestion = questions.get(currentQuestionIndex);
+
+            System.out.println("\nQuestion " + (currentQuestionIndex + 1) + ": " + currentQuestion.getQuestionText());
+
+            List<String> options = currentQuestion.getOptions();
+            for (int i = 0; i < options.size(); i++) {
+                System.out.println((i + 1) + ". " + options.get(i));
+            }
+
+            System.out.print("Your choice: ");
+            int userChoice = scanner.nextInt();
+
+            processUserAnswer(userChoice - 1, currentQuestion.getCorrectOptionIndex());
+        } else {
+            endQuiz();
+        }
+    }
+
+    private void processUserAnswer(int userChoice, int correctOptionIndex) {
+        if (userChoice == correctOptionIndex) {
+            System.out.println("Correct!");
+            score++;
+        } else {
+            System.out.println("Incorrect. The correct answer was option " + (correctOptionIndex + 1));
+        }
+
+        currentQuestionIndex++;
+        displayNextQuestion();
+    }
+
+    private void endQuiz() {
+        timer.cancel();
+        System.out.println("\nQuiz ended!");
+        System.out.println("Your final score: " + score + " out of " + questions.size());
+
+        // Display a summary of correct/incorrect answers
+        for (int i = 0; i < questions.size(); i++) {
+            Question question = questions.get(i);
+            System.out.println("Question " + (i + 1) + ": " + question.getQuestionText());
+            System.out.println("Your answer: " + (i < score ? "Correct" : "Incorrect"));
+        }
+
+        scanner.close();
+    }
+
+    public static void main(String[] args) {
+        QuizApplication quizApp = new QuizApplication();
+
+        // Adding sample quiz questions
+        quizApp.addQuestion(new Question("What is the capital of France?",
+                List.of("Berlin", "Paris", "Rome", "Madrid"), 1));
+        quizApp.addQuestion(new Question("Which planet is known as the Red Planet?",
+                List.of("Venus", "Mars", "Jupiter", "Saturn"), 1));
+        quizApp.addQuestion(new Question("Who wrote 'Romeo and Juliet'?",
+                List.of("Charles Dickens", "Jane Austen", "William Shakespeare", "Mark Twain"), 2));
+
+        // Start the quiz
+        quizApp.startQuiz();
+    }
+}
